@@ -1,7 +1,9 @@
 package com.example.apijava.service.impl;
 
+import com.example.apijava.dto.CachedPage;
 import com.example.apijava.dto.ImageDto;
 import com.example.apijava.dto.ProductDto;
+import com.example.apijava.exceptions.ResourceNotFoundException;
 import com.example.apijava.models.Category;
 import com.example.apijava.models.Image;
 import com.example.apijava.models.Product;
@@ -11,38 +13,47 @@ import com.example.apijava.repositorys.ProductRepository;
 import com.example.apijava.request.AddProductRequest;
 import com.example.apijava.request.ProductUpdateRequest;
 import com.example.apijava.service.inteface.ProductService;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.ValueOperations;
 import org.springframework.stereotype.Service;
 import org.modelmapper.ModelMapper;
 
 import java.util.List;
+import java.util.Optional;
 
 @Service
 public class ProductServiceImpl implements ProductService {
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
+    private final RedisTemplate<String, Object> redisTemplate;
+    private static final String PRODUCT_KEY = "product";
+
 
     private ModelMapper modelMapper;
     private final ImageRepository imageRepository;
 
     @Autowired
-    public ProductServiceImpl(ProductRepository productRepository, CategoryRepository categoryRepository, ImageRepository imageRepository) {
+    public ProductServiceImpl(ProductRepository productRepository, CategoryRepository categoryRepository, RedisTemplate<String, Object> redisTemplate, ImageRepository imageRepository) {
         this.productRepository = productRepository;
         this.categoryRepository = categoryRepository;
+        this.redisTemplate = redisTemplate;
         this.imageRepository = imageRepository;
         this.modelMapper = new ModelMapper();
     }
 
     @Override
     public Product addProduct(AddProductRequest productRequest) {
-        // Validate input
+
         if (productRequest.getCategories() == null || productRequest.getCategories().isEmpty()) {
             throw new RuntimeException("Categories not found");
         }
+
 
         List<Category> categories = productRequest.getCategories().stream().map(categoryRequest -> {
             Category existingCategory = categoryRepository.findByCategoryName(categoryRequest.getCategoryName());
@@ -56,26 +67,22 @@ public class ProductServiceImpl implements ProductService {
             }
         }).toList();
 
-        Product newProduct = new Product(
-                productRequest.getName(),
-                productRequest.getDescription(),
-                productRequest.getStock(),
-                productRequest.getPrice(),
-                categories
-        );
+        Product newProduct = new Product(productRequest.getName(), productRequest.getDescription(), productRequest.getStock(), productRequest.getPrice(), categories);
 
-        return productRepository.save(newProduct);
+        //save redis
+        Product saveProduct = productRepository.save(newProduct);
+        String key = PRODUCT_KEY + ":" + saveProduct.getId();
+        redisTemplate.opsForValue().set(key, saveProduct);
+
+        return saveProduct;
     }
 
     @Override
-    public Product updateProduct(ProductUpdateRequest product, Long id) {
-        return productRepository.findById(id)
-                .map(existingProduct -> updateProduct(existingProduct, product))
-                .map(productRepository::save)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+    public Product updateProduct(ProductUpdateRequest productUpdateRequest, Long id) {
+        return productRepository.findById(id).map(existingProduct -> updateProductDetails(existingProduct, productUpdateRequest)).map(productRepository::save).orElseThrow(() -> new RuntimeException("Product not found"));
     }
 
-    private Product updateProduct(Product existingProduct, ProductUpdateRequest productUpdateRequest) {
+    private Product updateProductDetails(Product existingProduct, ProductUpdateRequest productUpdateRequest) {
         existingProduct.setName(productUpdateRequest.getName());
         existingProduct.setDescription(productUpdateRequest.getDescription());
         existingProduct.setPrice(productUpdateRequest.getPrice());
@@ -85,10 +92,10 @@ public class ProductServiceImpl implements ProductService {
             throw new RuntimeException("Categories cannot be null or empty");
         }
 
-        Category category = categoryRepository.findByCategoryName(productUpdateRequest.getCategories().getFirst().getCategoryName());
+        Category category = categoryRepository.findByCategoryName(productUpdateRequest.getCategories().get(0).getCategoryName());
 
         if (category == null) {
-            throw new RuntimeException("Category not found: ");
+            throw new RuntimeException("Category not found: " + productUpdateRequest.getCategories().get(0).getCategoryName());
         }
 
         existingProduct.setCategories(List.of(category));
@@ -98,26 +105,48 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public void deleteProductById(Long id) {
-        productRepository.findById(id)
-                .ifPresentOrElse(productRepository::delete,
-                        () -> {
-                            throw new RuntimeException("Product not found");});
+        productRepository.findById(id).ifPresentOrElse(product -> {
+            productRepository.delete(product);
+            clearCache(product.getId());
+        }, () -> {
+            throw new RuntimeException("Product not found");
+        });
     }
 
     @Override
     public Page<Product> searchProduct(String keyword, Integer pageNO) {
+
+        String key = PRODUCT_KEY + ":pageNo:" + pageNO + ":keyword:" + keyword;
+        CachedPage<Product> cachedPage = (CachedPage<Product>) redisTemplate.opsForValue().get(key);
+        if (cachedPage != null) {
+            return new PageImpl<>(cachedPage.getContent(), PageRequest.of(pageNO - 1, 10), cachedPage.getTotalElements());
+        }
+
         List<Product> fullList = productRepository.searchProducts(keyword);
         Pageable pageable = PageRequest.of(pageNO - 1, 10);
-        int start = Math.min((int) pageable.getOffset(), fullList.size());
+        int start = Math.min((int) pageable.getOffset(), pageable.getPageSize());
         int end = Math.min(start + pageable.getPageSize(), fullList.size());
         List<Product> pageList = fullList.subList(start, end);
-        return new PageImpl<>(pageList, pageable, fullList.size());
+        Page<Product> page = new PageImpl<>(pageList, pageable, fullList.size());
+        redisTemplate.opsForValue().set(key, page);
+        return page;
     }
 
     @Override
     public Page<Product> getAllProduct(Integer pageNO) {
-        Pageable pageable = PageRequest.of(pageNO - 1, 6);
-        return this.productRepository.findAll(pageable);
+        String key = PRODUCT_KEY + ":pageNo:" + pageNO;
+
+        CachedPage<Product> cachedPage = (CachedPage<Product>) redisTemplate.opsForValue().get(key);
+        if (cachedPage != null) {
+            return new PageImpl<>(cachedPage.getContent(), PageRequest.of(pageNO - 1, 10), cachedPage.getTotalElements());
+        }
+
+        Pageable pageable = PageRequest.of(pageNO - 1, 10);
+        Page<Product> page = productRepository.findAll(pageable);
+        CachedPage<Product> cacheData = new CachedPage<>(page.getContent(), page.getTotalElements());
+
+        redisTemplate.opsForValue().set(key, cacheData);
+        return page;
     }
 
     @Override
@@ -133,18 +162,31 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public ProductDto convertToDto(Product product) {
-        ProductDto productDto = modelMapper.map(product, ProductDto.class);
-        List<Image> images = imageRepository.findByProductId(product.getId());
-        List<ImageDto> imageDto = images.stream()
-                .map(image -> modelMapper.map(image, ImageDto.class))
-                .toList();
-        productDto.setImages(imageDto);
-        return productDto;
+//        ProductDto productDto = modelMapper.map(product, ProductDto.class);
+//        List<Image> images = imageRepository.findByProductId(product.getId());
+//        List<ImageDto> imageDto = images.stream().map(image -> modelMapper.map(image, ImageDto.class)).toList();
+//        productDto.setImages(imageDto);
+//        return productDto;
+        return null;
     }
 
+    //Get redis if false -> db
     @Override
     public Product getProductById(Long id) {
-        return productRepository.findById(id)
+        String key = PRODUCT_KEY + ":" + id;
+        Product cachedProduct = (Product) redisTemplate.opsForValue().get(key);
+        if (cachedProduct != null) {
+            return cachedProduct;
+        }
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Product not found"));
+
+        redisTemplate.opsForValue().set(key, product);
+        return product;
+    }
+
+    private void clearCache(Long id) {
+        String key = PRODUCT_KEY + ":" + id;
+        redisTemplate.delete(key);
     }
 }
